add opengraph tags for better sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dark Mode Switch</title>
+  <meta name="description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
+  <meta property="og:image" content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
+  <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
 </head>
