--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dark Mode Switch</title>
   <meta name="description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
+  
+  <meta property="og:site_name" content="GitHub">
   <meta property="og:image" content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
+  <meta property="og:title" content="dark-mode-switch">
   <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
+  <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/index.html">
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
