--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
+          
+          <!-- You must load 'dark-mode-switch.js' after the dark-mode switch -->
+          <script src="dark-mode-switch.min.js"></script>
 
         </div>
       </nav>
@@ -54,8 +57,6 @@
       <p>&copy; 2019</p>
     </footer>
 
-    <!-- You must load 'dark-mode-switch.js' at the foot of the page -->
-    <script src="dark-mode-switch.min.js"></script>
   </div>
 </body>
 
