Fixes formatting on README, package.json and index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dark Mode Switch</title>
   <meta name="description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
-  
+
   <meta property="og:site_name" content="GitHub">
-  <meta property="og:image" content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
+  <meta property="og:image"
+    content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
   <meta property="og:title" content="dark-mode-switch">
   <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
   <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/index.html">
-  
+  <link rel="author" href="https://christianoliff.com/">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
 </head>
@@ -31,8 +33,7 @@
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
-          
-          <!-- You must load 'dark-mode-switch.js' after the dark-mode switch -->
+
           <script src="dark-mode-switch.min.js"></script>
 
         </div>
@@ -44,10 +45,11 @@
       <p class="lead">Add a dark-mode theme switch with a Bootstrap Custom Switch</p>
       <ul class="list-unstyled">
         <li>&middot; Uses local storage to save preference</li>
-        <li>&middot; Only 230 Bytes minified and gzipped!</li>
+        <li>&middot; Only 262 Bytes minified and gzipped!</li>
       </ul>
       <p>
-        <a href="https://github.com/coliff/dark-mode-switch" target="_blank" class="btn btn-lg btn-secondary">
+        <a href="https://github.com/coliff/dark-mode-switch" target="_blank" rel="noopener"
+          class="btn btn-lg btn-secondary">
           Learn more
         </a>
       </p>
