Update to Bootstrap v4.4.0
- minor Editorconfig tweak
- Update gzipped filesize in `README.md`

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
   <meta property="og:title" content="dark-mode-switch">
   <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
-  <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/index.html">
+  <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/">
   <link rel="author" href="https://christianoliff.com/">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
 </head>
 
