Detect if user has prefers-dark-mode setting on

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
 
-          <script src="dark-mode-switch.js"></script>
+          <script src="dark-mode-switch.min.js"></script>
 
         </div>
       </nav>
