Update demo page to Bootstrap v4.5.0

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/">
   <link rel="author" href="https://christianoliff.com/">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
+
 </head>
 
 <body class="bg-white text-center d-flex h-100">
+
   <div class="container d-flex p-3 mx-auto flex-column">
     <header class="mb-auto">
       <h3 class="float-left">Dark Mode Switch</h3>
@@ -33,8 +35,8 @@
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
-
           <script src="dark-mode-switch.min.js"></script>
+
 
         </div>
       </nav>
@@ -56,7 +58,7 @@
     </main>
 
     <footer class="mt-auto">
-      <p>&copy; 2019</p>
+      <p>&copy; 2019-2020</p>
     </footer>
 
   </div>
