--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
 
     <footer class="mt-auto">
-      <p>&copy; 2019 - <script>new Date().getFullYear()>document.write(new Date().getFullYear());</script></p>
+      <p>&copy; 2021</p>
     </footer>
 
   </div>
