--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
   <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/">
   <link rel="author" href="https://christianoliff.com/">
+  <meta name="twitter:creator" content="@christianoliff">
+  <meta name="monetization" content="$ilp.uphold.com/Epqzn3YGr2MB">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="dark-mode.css">
