--- a/index.html
+++ b/index.html
@@ -18,23 +18,28 @@
   <meta name="twitter:creator" content="@christianoliff">
   <meta name="monetization" content="$ilp.uphold.com/Epqzn3YGr2MB">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
+
+  <!-- IE 11 polyfill for CSS and Custom Properties -->
+  <script
+    nomodule>window.MSInputMethodContext && document.documentMode && document.write('<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-ie11@5/css/bootstrap-ie11.min.css"><script src="https://cdn.jsdelivr.net/npm/ie11-custom-properties@4/ie11CustomProperties.min.js"><\/script>');</script>
+
   <link rel="stylesheet" href="dark-mode.css">
 
 </head>
 
 <body class="bg-white text-center d-flex h-100">
 
-  <div class="container d-flex p-3 mx-auto flex-column">
+  <div class="container d-flex p-3 mx-auto w-100 flex-column">
     <header class="mb-auto">
-      <h3 class="float-left">Dark Mode Switch</h3>
-      <nav class="nav justify-content-center float-right">
+      <div class="float-md-start fw-bold fs-5">Dark Mode Switch</div>
+      <nav class="nav justify-content-center float-md-end">
         <a class="nav-link active" href="https://coliff.github.io/dark-mode-switch/">Home</a>
         <a class="nav-link" href="https://github.com/coliff/dark-mode-switch" target="_blank">GitHub</a>
         <div class="nav-link">
 
-          <div class="custom-control custom-switch">
-            <input type="checkbox" class="custom-control-input" id="darkSwitch">
+          <div class="form-check form-switch">
+            <input type="checkbox" class="form-check-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
           <script src="dark-mode-switch.min.js"></script>
@@ -48,7 +53,7 @@
       <p class="lead">Add a dark-mode theme switch with a Bootstrap Custom Switch</p>
       <ul class="list-unstyled">
         <li>&middot; Uses local storage to save preference</li>
-        <li>&middot; Only 263 Bytes minified and gzipped!</li>
+        <li>&middot; Only 383 Bytes minified and gzipped!</li>
       </ul>
       <p>
         <a href="https://github.com/coliff/dark-mode-switch" target="_blank" rel="noopener"
