make dark mode as default and switch to lightmode

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
 </head>
 
-<body class="bg-white text-center d-flex h-100">
+<body class="bg-white text-center d-flex h-100" >
 
   <div class="container d-flex p-3 mx-auto w-100 flex-column">
     <header class="mb-auto">
       <div class="float-md-start fw-bold fs-5">Dark Mode Switch</div>
       <nav class="nav justify-content-center float-md-end">
         <a class="nav-link active" href="https://coliff.github.io/dark-mode-switch/">Home</a>
+        <a class="nav-link active" href="darkmodedefault.html">light Mode Switch</a>
         <a class="nav-link" href="https://github.com/coliff/dark-mode-switch" target="_blank">GitHub</a>
         <div class="nav-link">
 
