Update Dev Deps

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🌓</text></svg>">
 
-  <meta property="og:site_name" content="GitHub">
+  <meta property="og:site_name" content="Dark Mode Switch">
   <meta property="og:image"
     content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
   <meta property="og:title" content="dark-mode-switch">
